--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
-    "uniqid": "^5.4.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "uniqid": "^5.4.0"
   }
 }
