sass package fix

--- a/package.json
+++ b/package.json
@@ -22,15 +22,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
-    "css-loader": "^6.7.1",
-    "node-sass": "^7.0.3",
-    "postcss": "^8.4.16",
-    "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^7.8.2",
     "prop-types": "^15.8.1",
     "resolve-url-loader": "^5.0.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1"
+    "sass": "^1.58.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
